Fixed alignment of search box/button

--- a/src/Components/Weather.css
+++ b/src/Components/Weather.css
@@ -49,7 +49,7 @@
   }
   
   .btn {
-    margin-bottom: 1rem;
+    margin-bottom: .5rem;
     margin-left: 0.25rem;
   }
   
